syntax = "proto3";
package greeter;

option go_package = "greeter-service/greeter";


service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
} 

message HelloRequest {
    string Name = 1;
}

message HelloReply {
    string WelcomeMessage = 1;
}